--- a/BookingTester/BookingTester.csproj
+++ b/BookingTester/BookingTester.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Hangfire.Core" Version="1.8.18" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.*" />
+    <PackageReference Include="Hangfire.InMemory" Version="1.0.0" />
     <PackageReference Include="Hangfire.Storage.SQLite" Version="0.4.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
