--- a/ClimbingBookerApi/appsettings.json
+++ b/ClimbingBookerApi/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKey": "your-secret-api-key-here"
 }
